# didwebvh-watcher-py

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
app/: __init__.py
app/models/: records.py
app/plugins/: __init__.py  askar.py  webvh.py
app/routers/: admin.py  dids.py  resources.py
