[tool.poetry]
name = "didwebvh-watcher-py"
version = "0.1.0"
description = ""
authors = ["PatStLouis <patrick.st-louis@opsecid.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
did-webvh = "^0.3.0"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.4"
ruff = "^0.11.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
